Use go-kit for probes
